--- a/docs/modules/ROOT/pages/reference/extensions/hazelcast.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/hazelcast.adoc
@@ -66,17 +66,13 @@ https://quarkus.io/guides/native-and-ssl[Quarkus SSL guide].
 
 This extension leverages https://github.com/hazelcast/quarkus-hazelcast-client[Hazelcast Client for Quarkus]. The configuration of the HazelcastInstance is managed by the extension. To configure Hazelcast Instance, check the https://github.com/hazelcast/quarkus-hazelcast-client[Hazelcast Client for Quarkus] guide.
 
-*Please note that the camel-quarkus-hazelcast component works only with the client mode.*
+IMPORTANT: `camel-quarkus-hazelcast` works only in client mode.
 
-To use the Hazelcast instance in the camel-quarkus-hazelcast component, you should configure the component with :
-
-* The HazelcastInstance initialized by the Hazelcast Client for Quarkus
-* The component mode as : "client"
-
-Example of configuration for HazelcastMap component:
+To use the `HazelcastInstance` bean in the Hazelcast component, you should configure the component as follows.
 
 [source,java]
 ----
+    <1>
     @Inject
     HazelcastInstance hazelcastInstance;
 
@@ -87,11 +83,13 @@ Example of configuration for HazelcastMap component:
     HazelcastDefaultComponent hazelcastMap() {
         final HazelcastMapComponent hazelcastComponent = new HazelcastMapComponent();
         hazelcastComponent.setHazelcastInstance(hazelcastInstance);
+        <2>
         hazelcastComponent.setHazelcastMode(HazelcastConstants.HAZELCAST_CLIENT_MODE);
         return getHazelcastComponent(hazelcastComponent);
     }
 ----
+<1> The `HazelcastInstance` bean instance created by the `quarkus-hazelcast` extension
+<2> The Hazelcast mode must be set to client mode
 
-You may want to check the https://github.com/apache/camel-quarkus/tree/main/integration-tests/hazelcast[integration test]
-in our source tree as an example.
+Some more examples can be found in the Camel Quarkus Hazelcast https://github.com/apache/camel-quarkus/tree/main/integration-tests/hazelcast[integration tests].
 
