--- a/extensions/file-cluster-service/runtime/src/main/doc/configuration.adoc
+++ b/extensions/file-cluster-service/runtime/src/main/doc/configuration.adoc
@@ -1,4 +1,3 @@
-
 === Having only a single consumer in a cluster consuming from a given endpoint
 
 When the same route is deployed on multiple JVMs, it could be interesting to use this extension in conjunction with the xref:reference/extensions/master.adoc[Master one].
@@ -6,15 +5,18 @@ In such a setup, a single consumer will be active at a time across the whole cam
 
 For instance, having the route below deployed on multiple JVMs:
 
-```
-from("master:ns:timer:test?period=100").log("Timer invoked on a single JVM at a time");
-```
+[source,java]
+----
+from("master:ns:timer:test?period=100")
+    .log("Timer invoked on a single JVM at a time");
+----
 
-It's possible to configure the file cluster service with a property like below:
+It's possible to configure the file cluster service with a property like below in `application.properties`:
 
-```
+[source,properties]
+----
 quarkus.camel.cluster.file.root = target/cluster-folder-where-lock-file-will-be-held
-```
+----
 
 As a result, a single consumer will be active across the `ns` camel master namespace.
 It means that, at a given time, only a single timer will generate exchanges across all JVMs.
