--- a/docs/modules/ROOT/pages/reference/extensions/gson.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/gson.adoc
@@ -48,10 +48,25 @@ endif::[]
 [id="extensions-gson-additional-camel-quarkus-configuration"]
 == Additional Camel Quarkus configuration
 
-[id="extensions-gson-configuration-marshaling-unmarshaling-objects-in-native-mode"]
-=== Marshaling/Unmarshaling objects in native mode
+[id="extensions-gson-configuration-marshaling-unmarshalling-objects-in-native-mode"]
+=== Marshaling / Unmarshalling objects in native mode
 
-When marshaling/unmarshaling objects in native mode, all the serialized classes need to be link:https://quarkus.io/guides/writing-native-applications-tips#registering-for-reflection[registered for reflection].
-As such, when using `GsonDataFormat.setUnmarshalType(...)`, `GsonDataFormat.setUnmarshalTypeName(...)` and even `GsonDataFormat.setUnmarshalGenericType(...)`, the unmarshal type as well as sub field types should be registered for reflection.
-See a working example in this link:https://github.com/apache/camel-quarkus/blob/main/integration-tests/dataformats-json/src/main/java/org/apache/camel/quarkus/component/dataformats/json/model/PojoA.java[integration test].
+When marshaling / unmarshalling objects in native mode, their target types must be link:https://quarkus.io/guides/writing-native-applications-tips#registering-for-reflection[registered for reflection].
+
+For example when using any of the following:
+
+* `GsonDataFormat.setUnmarshalType(MyPojo.class)`
+* `GsonDataFormat.setUnmarshalTypeName("org.acme.MyPojo")`
+* `GsonDataFormat.setUnmarshalGenericType(MyPojo.class)`
+
+`MyPojo.class` can be registered for reflection as follows.
+
+[source,java]
+----
+package org.acme.MyPojo;
+
+@RegisterForReflection
+public class MyPojo {
+}
+----
 
