--- a/docs/modules/ROOT/pages/reference/extensions/kamelet.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/kamelet.adoc
@@ -79,11 +79,10 @@ It's advised to name files containing your custom Kamelet definitions with the e
 a|icon:lock[title=Fixed at build time] [[quarkus.camel.kamelet.identifiers]]`link:#quarkus.camel.kamelet.identifiers[quarkus.camel.kamelet.identifiers]`
 
 Optional comma separated list of kamelet identifiers to configure for native mode support.
-A kamelet identifier is the Kamelet file name without the .kamelet.yaml suffix.
-<p>
-The default value '*' will result in all discovered Kamelet definition files being included into the native image.
+A kamelet identifier is the Kamelet file name without the `.kamelet.yaml` suffix.
+
+The default value `*` will result in all discovered Kamelet definition files being included into the native image.
 Note that this configuration option is only relevant when producing a native application.
-</p>
 | List of `string`
 | `*`
 |===
