--- a/extensions/jolokia/runtime/src/main/doc/usage.adoc
+++ b/extensions/jolokia/runtime/src/main/doc/usage.adoc
@@ -111,5 +111,5 @@ Note that if you choose to use https://github.com/hawtio/hawtio-online[hawtio-on
 
 [source]
 ----
-quarkus.camel.jolokia.kubernetes.client-principal="cn=hawtio-online.hawtio.svc"
+quarkus.camel.jolokia.kubernetes.client-principal=cn=hawtio-online.hawtio.svc
 ----
