Update documentation for missing camel extensions that are knative consumer compatible

--- a/docs/modules/ROOT/pages/user-guide/kubernetes.adoc
+++ b/docs/modules/ROOT/pages/user-guide/kubernetes.adoc
@@ -9,9 +9,11 @@ More information in the https://quarkus.io/guides/deploying-to-kubernetes[`Quark
 == Knative
 The Camel Quarkus extensions whose consumers support Knative deployment are:
 
-// - xref:reference/extensions/cxf-soap.adoc[`camel-quarkus-cxf-soap`]
+- xref:reference/extensions/cxf-soap.adoc[`camel-quarkus-cxf-soap`]
 - xref:reference/extensions/grpc.adoc[`camel-quarkus-grpc`]
+- xref:reference/extensions/http.adoc[`camel-quarkus-http`]
 - xref:reference/extensions/knative.adoc[`camel-quarkus-knative`]
+- xref:reference/extensions/netty-http.adoc[`camel-quarkus-netty-http`]
 - xref:reference/extensions/platform-http.adoc[`camel-quarkus-platform-http`]
 - xref:reference/extensions/rest.adoc[`camel-quarkus-rest`]
 - xref:reference/extensions/servlet.adoc[`camel-quarkus-servlet`]
