--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -61,6 +61,7 @@
 *** xref:reference/extensions/jackson-avro.adoc[Avro Jackson]
 *** xref:reference/extensions/azure-cosmosdb.adoc[Azure CosmosDB]
 *** xref:reference/extensions/azure-eventhubs.adoc[Azure Event Hubs]
+*** xref:reference/extensions/azure-files.adoc[Azure Files]
 *** xref:reference/extensions/azure-key-vault.adoc[Azure Key Vault]
 *** xref:reference/extensions/azure-servicebus.adoc[Azure ServiceBus]
 *** xref:reference/extensions/azure-storage-blob.adoc[Azure Storage Blob Service]
