--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -99,6 +99,7 @@
 *** xref:reference/extensions/couchbase.adoc[Couchbase]
 *** xref:reference/extensions/cron.adoc[Cron]
 *** xref:reference/extensions/crypto.adoc[Crypto (JCE)]
+*** xref:reference/extensions/dfdl.adoc[DFDL]
 *** xref:reference/extensions/dns.adoc[DNS]
 *** xref:reference/extensions/dsl-modeline.adoc[DSL Modeline]
 *** xref:reference/extensions/dataformat.adoc[Data Format]
