Revert "Use hyphenated anchor links for config properties"
This reverts commit 172e7ac65d8bb1a75bf5b23cde95bdb4f4fe6261.

--- a/docs/modules/ROOT/pages/reference/extensions/cxf-soap.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/cxf-soap.adoc
@@ -316,7 +316,7 @@ quarkus.cxf.codegen.wsdl2java.additional-params = -validate
 | Configuration property | Type | Default
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-cxf-class-generation-exclude-patterns]]`link:#quarkus-camel-cxf-class-generation-exclude-patterns[quarkus.camel.cxf.class-generation.exclude-patterns]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.cxf.class-generation.exclude-patterns]]`link:#quarkus.camel.cxf.class-generation.exclude-patterns[quarkus.camel.cxf.class-generation.exclude-patterns]`
 
 For CXF service interfaces to work properly, some ancillary classes (such as request and response wrappers) need to
 be generated at build time. Camel Quarkus lets the `quarkus-cxf` extension to do this for all service interfaces
