--- a/docs/modules/ROOT/pages/reference/extensions/joor.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/joor.adoc
@@ -58,19 +58,19 @@ the one generated at runtime. For this purpose, the next configuration propertie
 | Configuration property | Type | Default
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-joor-single-quotes]]`link:#quarkus-camel-joor-single-quotes[quarkus.camel.joor.single-quotes]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.joor.single-quotes]]`link:#quarkus.camel.joor.single-quotes[quarkus.camel.joor.single-quotes]`
 
 Indicates whether a jOOR expression can use single quotes instead of double quotes.
 | `boolean`
 | `true`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-joor-config-resource]]`link:#quarkus-camel-joor-config-resource[quarkus.camel.joor.config-resource]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.joor.config-resource]]`link:#quarkus.camel.joor.config-resource[quarkus.camel.joor.config-resource]`
 
 The specific location of the configuration of the jOOR language.
 | `string`
 | 
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-joor-compile-at-build-time]]`link:#quarkus-camel-joor-compile-at-build-time[quarkus.camel.joor.compile-at-build-time]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.joor.compile-at-build-time]]`link:#quarkus.camel.joor.compile-at-build-time[quarkus.camel.joor.compile-at-build-time]`
 
 In JVM mode, indicates whether the expressions must be compiled at build time.
 | `boolean`
