--- a/docs/modules/ROOT/pages/reference/extensions/micrometer.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/micrometer.adoc
@@ -91,13 +91,13 @@ get created for you.
 | Configuration property | Type | Default
 
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-enable-route-policy]]`link:#quarkus-camel-metrics-enable-route-policy[quarkus.camel.metrics.enable-route-policy]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.enable-route-policy]]`link:#quarkus.camel.metrics.enable-route-policy[quarkus.camel.metrics.enable-route-policy]`
 
 Set whether to enable the MicrometerRoutePolicyFactory for capturing metrics on route processing times.
 | `boolean`
 | `true`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-enable-message-history]]`link:#quarkus-camel-metrics-enable-message-history[quarkus.camel.metrics.enable-message-history]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.enable-message-history]]`link:#quarkus.camel.metrics.enable-message-history[quarkus.camel.metrics.enable-message-history]`
 
 Set whether to enable the MicrometerMessageHistoryFactory for capturing metrics on individual route node processing
 times. Depending on the number of configured route nodes, there is the potential to create a large volume of metrics.
@@ -105,13 +105,13 @@ Therefore, this option is disabled by default.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-enable-exchange-event-notifier]]`link:#quarkus-camel-metrics-enable-exchange-event-notifier[quarkus.camel.metrics.enable-exchange-event-notifier]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.enable-exchange-event-notifier]]`link:#quarkus.camel.metrics.enable-exchange-event-notifier[quarkus.camel.metrics.enable-exchange-event-notifier]`
 
 Set whether to enable the MicrometerExchangeEventNotifier for capturing metrics on exchange processing times.
 | `boolean`
 | `true`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-base-endpoint-uri-exchange-event-notifier]]`link:#quarkus-camel-metrics-base-endpoint-uri-exchange-event-notifier[quarkus.camel.metrics.base-endpoint-uri-exchange-event-notifier]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.base-endpoint-uri-exchange-event-notifier]]`link:#quarkus.camel.metrics.base-endpoint-uri-exchange-event-notifier[quarkus.camel.metrics.base-endpoint-uri-exchange-event-notifier]`
 
 Whether to use static or dynamic values for Endpoint Name tags in captured metrics. By default, static values are
 used. When using dynamic tags, then a dynamic to (toD) can compute many different endpoint URIs that,
@@ -119,27 +119,27 @@ can lead to many tags as the URI is dynamic, so use this with care if setting th
 | `boolean`
 | `true`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-enable-route-event-notifier]]`link:#quarkus-camel-metrics-enable-route-event-notifier[quarkus.camel.metrics.enable-route-event-notifier]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.enable-route-event-notifier]]`link:#quarkus.camel.metrics.enable-route-event-notifier[quarkus.camel.metrics.enable-route-event-notifier]`
 
 Set whether to enable the MicrometerRouteEventNotifier for capturing metrics on the total number of routes and total
 number of routes running.
 | `boolean`
 | `true`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-enable-instrumented-thread-pool-factory]]`link:#quarkus-camel-metrics-enable-instrumented-thread-pool-factory[quarkus.camel.metrics.enable-instrumented-thread-pool-factory]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.enable-instrumented-thread-pool-factory]]`link:#quarkus.camel.metrics.enable-instrumented-thread-pool-factory[quarkus.camel.metrics.enable-instrumented-thread-pool-factory]`
 
 Set whether to gather performance information about Camel Thread Pools by injecting an InstrumentedThreadPoolFactory.
 | `boolean`
 | `false`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-naming-strategy]]`link:#quarkus-camel-metrics-naming-strategy[quarkus.camel.metrics.naming-strategy]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.naming-strategy]]`link:#quarkus.camel.metrics.naming-strategy[quarkus.camel.metrics.naming-strategy]`
 
 Controls the naming style to use for metrics. The available values are `default` and `legacy`. `default` uses the
 default Micrometer naming convention. `legacy` uses the legacy camel-case naming style.
 | `default`, `legacy`
 | `default`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-route-policy-level]]`link:#quarkus-camel-metrics-route-policy-level[quarkus.camel.metrics.route-policy-level]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.route-policy-level]]`link:#quarkus.camel.metrics.route-policy-level[quarkus.camel.metrics.route-policy-level]`
 
 Sets the level of metrics to capture. The available values are `all` ,`context` and `route`. `all` captures metrics
 for both the camel context and routes. `route` captures metrics for routes only. `context` captures metrics for the
@@ -147,7 +147,7 @@ camel context only.
 | `all`, `context`, `route`
 | `all`
 
-a|icon:lock[title=Fixed at build time] [[quarkus-camel-metrics-route-policy-exclude-pattern]]`link:#quarkus-camel-metrics-route-policy-exclude-pattern[quarkus.camel.metrics.route-policy-exclude-pattern]`
+a|icon:lock[title=Fixed at build time] [[quarkus.camel.metrics.route-policy-exclude-pattern]]`link:#quarkus.camel.metrics.route-policy-exclude-pattern[quarkus.camel.metrics.route-policy-exclude-pattern]`
 
 Comma separated list of route IDs to exclude from metrics collection.
 | `string`
