--- a/docs/modules/ROOT/pages/reference/extensions/opentelemetry.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/opentelemetry.adoc
@@ -124,7 +124,7 @@ There is more information about CDI instrumentation in the https://quarkus.io/gu
 | Configuration property | Type | Default
 
 
-a| [[quarkus-camel-opentelemetry-encoding]]`link:#quarkus-camel-opentelemetry-encoding[quarkus.camel.opentelemetry.encoding]`
+a| [[quarkus.camel.opentelemetry.encoding]]`link:#quarkus.camel.opentelemetry.encoding[quarkus.camel.opentelemetry.encoding]`
 
 Sets whether header names need to be encoded. Can be useful in situations where OpenTelemetry propagators potentially
 set header name values in formats that are not compatible with the target system. E.g for JMS where the specification
@@ -132,7 +132,7 @@ mandates header names are valid Java identifiers.
 | `boolean`
 | `false`
 
-a| [[quarkus-camel-opentelemetry-exclude-patterns]]`link:#quarkus-camel-opentelemetry-exclude-patterns[quarkus.camel.opentelemetry.exclude-patterns]`
+a| [[quarkus.camel.opentelemetry.exclude-patterns]]`link:#quarkus.camel.opentelemetry.exclude-patterns[quarkus.camel.opentelemetry.exclude-patterns]`
 
 Sets whether to disable tracing for endpoint URIs or Processor ids that match the given comma separated patterns. The
 pattern can take the following forms:
@@ -145,7 +145,7 @@ pattern can take the following forms:
 | `string`
 | 
 
-a| [[quarkus-camel-opentelemetry-trace-processors]]`link:#quarkus-camel-opentelemetry-trace-processors[quarkus.camel.opentelemetry.trace-processors]`
+a| [[quarkus.camel.opentelemetry.trace-processors]]`link:#quarkus.camel.opentelemetry.trace-processors[quarkus.camel.opentelemetry.trace-processors]`
 
 Sets whether to create new OpenTelemetry spans for each Camel Processor. Use the excludePatterns property to filter
 out Processors.
