--- a/docs/modules/ROOT/pages/reference/extensions/nitrite.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/nitrite.adoc
@@ -48,7 +48,7 @@ endif::[]
 [id="extensions-nitrite-usage"]
 == Usage
 If your persistence objects in native mode implement `java.io.Serializable` and are not automatically registered for serialization,
-you have to register them for serialization. Look into xref:extensions/core.adoc#quarkus.camel.native.reflection.serialization-enabled[documentation]
+you have to register them for serialization. Look into xref:extensions/core.adoc#quarkus-camel-native-reflection-serialization-enabled[documentation]
 to see which classes are registered and how to register other ones.
 
 
