--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -151,6 +151,7 @@
 *** xref:reference/extensions/hashicorp-vault.adoc[Hashicorp Vault]
 *** xref:reference/extensions/hazelcast.adoc[Hazelcast Atomic Number]
 *** xref:reference/extensions/headersmap.adoc[Headersmap]
+*** xref:reference/extensions/ibm-secrets-manager.adoc[IBM Secrets Manager]
 *** xref:reference/extensions/iec60870.adoc[IEC 60870 Client]
 *** xref:reference/extensions/irc.adoc[IRC]
 *** xref:reference/extensions/ignite.adoc[Ignite Cache]
