--- a/docs/modules/ROOT/pages/reference/extensions/smooks.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/smooks.adoc
@@ -40,3 +40,10 @@ Please refer to the above links for usage and configuration details.
 ifeval::[{doc-show-user-guide-link} == true]
 Check the xref:user-guide/index.adoc[User guide] for more information about writing Camel Quarkus applications.
 endif::[]
+
+[id="extensions-smooks-usage"]
+== Usage
+[id="extensions-smooks-usage-edi"]
+=== EDI
+EDI is not supported in Camel Quarkus Smooks.
+
