fix of #7226: ldap config optimization + tests refactor

--- a/docs/modules/ROOT/pages/reference/extensions/ldap.adoc
+++ b/docs/modules/ROOT/pages/reference/extensions/ldap.adoc
@@ -46,6 +46,43 @@ endif::[]
 
 [id="extensions-ldap-usage"]
 == Usage
+[id="extensions-ldap-usage-configuration-via-properties"]
+=== Configuration via properties
+
+The LDAP component supports property-based configuration in addition to plain Camel configuration.
+Configuration property should follow the pattern:
+
+[source,properties]
+----
+quarkus.camel.ldap.dir-contexts.<dirContextName>.<property>
+----
+
+For more details, refer to the dirContext https://docs.oracle.com/en/java/javase/17/docs/api/java.naming/javax/naming/directory/DirContext.html[Javadoc].
+The following options are available:
+
+* initial-context-factory
+* provider-url
+* security-authentication
+* security-protocol
+* socket-factory
+
+If you need to specify an option that is not listed above, use the following property format:
+
+[source,properties]
+----
+quarkus.camel.ldap.dr-contexts."your_name".additional-options."not-listed_option_name"
+----
+
+Here is an example of configuration of a dirContext named `your_context` using SSL.
+
+[source,properties]
+----
+quarkus.camel.ldap.dir-contexts."your_context".initial-context-factory=com.sun.jndi.ldap.LdapCtxFactory
+quarkus.camel.ldap.dir-contexts."your_context".provider-url=ldaps://${ldap.host}:${ldap.sslPort}
+quarkus.camel.ldap.dir-contexts."your_context".security-protocol=ssl
+quarkus.camel.ldap.dir-contexts."your_context".socket-factory=org.apache.camel.quarkus.component.ldap.it.CustomSSLSocketFactory
+----
+
 [id="extensions-ldap-usage-using-ssl-in-native-mode"]
 === Using SSL in Native Mode
 
@@ -58,4 +95,63 @@ public class CustomSSLSocketFactory extends SSLSocketFactory {
     // The class definition is the same as in the above link. 
 }
 ----
+
+
+[id="extensions-ldap-additional-camel-quarkus-configuration"]
+== Additional Camel Quarkus configuration
+
+[width="100%",cols="80,5,15",options="header"]
+|===
+| Configuration property | Type | Default
+
+
+a| [[quarkus-camel-ldap-dir-contexts-dir-contexts-initial-context-factory]]`link:#quarkus-camel-ldap-dir-contexts-dir-contexts-initial-context-factory[quarkus.camel.ldap.dir-contexts."dir-contexts".initial-context-factory]`
+
+The initial context factory to use. The value of the property should be the fully qualified class name
+of the factory class that will create an initial context.
+| `string`
+| 
+
+a| [[quarkus-camel-ldap-dir-contexts-dir-contexts-provider-url]]`link:#quarkus-camel-ldap-dir-contexts-dir-contexts-provider-url[quarkus.camel.ldap.dir-contexts."dir-contexts".provider-url]`
+
+The service provider
+to use. The value of the property should contain a URL string
+(e.g. "ldap://somehost:389").
+| `string`
+| 
+
+a| [[quarkus-camel-ldap-dir-contexts-dir-contexts-security-protocol]]`link:#quarkus-camel-ldap-dir-contexts-dir-contexts-security-protocol[quarkus.camel.ldap.dir-contexts."dir-contexts".security-protocol]`
+
+The security protocol to use.
+Its value is a string determined by the service provider
+(e.g. "ssl").
+| `string`
+| 
+
+a| [[quarkus-camel-ldap-dir-contexts-dir-contexts-security-authentication]]`link:#quarkus-camel-ldap-dir-contexts-dir-contexts-security-authentication[quarkus.camel.ldap.dir-contexts."dir-contexts".security-authentication]`
+
+The security level to use.
+Its value is one of the following strings:
+"none", "simple", "strong".
+If this property is unspecified,
+the behaviour is determined by the service provider.
+| `string`
+| `none`
+
+a| [[quarkus-camel-ldap-dir-contexts-dir-contexts-socket-factory]]`link:#quarkus-camel-ldap-dir-contexts-dir-contexts-socket-factory[quarkus.camel.ldap.dir-contexts."dir-contexts".socket-factory]`
+
+The custom socket factory to use. The value of the property should be the fully qualified class name
+of the socket factory class.
+| `string`
+| 
+
+a| [[quarkus-camel-ldap-dir-contexts-dir-contexts-additional-options-additional-options]]`link:#quarkus-camel-ldap-dir-contexts-dir-contexts-additional-options-additional-options[quarkus.camel.ldap.dir-contexts."dir-contexts".additional-options."additional-options"]`
+
+Any other option which will be used during dirContext creation.
+| `Map<String,String>`
+| 
+|===
+
+[.configuration-legend]
+{doc-link-icon-lock}[title=Fixed at build time] Configuration property fixed at build time. All other configuration properties are overridable at runtime.
 
